--- a/src/config/properties.yaml
+++ b/src/config/properties.yaml
@@ -1,3 +1,5 @@
+app:
+  eventTime: 0 20 * * * #set time you want to get the message. See https://pkg.go.dev/github.com/robfig/cron/v3#hdr-CRON_Expression_Format
 weather:
   accuweather:
     url: https://dataservice.accuweather.com/forecasts/v1/daily/5day
